FE: fix order + shipping